<resources>
    <string name="app_name">Muspert</string>
    <string name="text_splash" translatable="false">Powered by babaetskv</string>

    <string name="in_development">Feature is in development</string>

    <!-- Tab names -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="cache">Cache</string>

    <!-- Button titles -->
    <string name="login">Login</string>
    <string name="resend_sms_code">Resend SMS code</string>
    <string name="done">Done</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Try again</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">next</string>
    <string name="skip">Skip</string>

    <!-- Toolbar titles -->
    <string name="sign_up">Sign Up</string>
    <string name="edit_photo">Edit photo</string>
    <string name="validation">Validation</string>

    <!-- Labels -->
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="enter_sms_code">Enter SMS code</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="sms_hint">Enter the code that was sent to your phone</string>
    <string name="music">Music</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>

    <!-- Hints -->
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="think_up_nickname">Think up nickname</string>

    <!--Messages-->
    <string name="edit_avatar">Edit avatar</string>
    <string name="empty_album_list_title">No albums</string>
    <string name="empty_album_list_message">There are no available albums at the moment.\nPlease try again later.</string>
    <string name="empty_genre_list_title">No genres</string>
    <string name="empty_genre_list_message">There are no available genres at the moment.\nPlease try again later.</string>
    <string name="empty_track_list_title">No tracks</string>
    <string name="empty_track_list_message">There are no available tracks at the moment.\nPlease try again later.</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="welcome_1_title">Welcome to Muspert</string>
    <string name="welcome_1_message">Enjoy you favorite tracks every day</string>
    <string name="welcome_2_title">Explore new</string>
    <string name="welcome_2_message">Get access to unlimited amount of albums</string>
    <string name="welcome_3_title">Listen everywhere</string>
    <string name="welcome_3_message">Listen to your favorite songs everywhere you want</string>
    <string name="added_to_favorites_message">Added to favorites</string>
    <string name="removed_from_favorites_message">Removed from favorites</string>
    <string name="empty_favorites_list_message">Your favorites list is empty</string>
    <string name="presearch_title">Enter search query</string>
    <string name="empty_search_results_title">No results</string>
    <string name="empty_search_results_message">There are no search results. Try to change search query.</string>
    <string name="empty_cache_list_message">There are no tracks in the cache</string>

    <!-- Alerts -->
    <string name="phone_number_is_null">Phone number is null</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="failure_authorization">Failure authorization</string>
    <string name="wrong_sms_code">Wrong SMS code</string>
    <string name="camera_permission_not_granted">Нет доступа к камере. Проверьте разрешения в настройках</string>
    <string name="read_storage_permission_not_granted">Нет доступа к файлам. Проверьте разрешения в настройках</string>

    <!-- Errors -->
    <string name="network_error">No network connection</string>
    <string name="bad_request_error">Invalid request</string>
    <string name="security_error">Missing required permissions</string>
    <string name="unknown_error">Unknown error</string>
    <string name="server_not_available_error">Server is not available. Please try again later</string>
    <string name="unauthorized_error">Please register in app</string>
    <string name="forbidden_error">You are not allowed to view this resource</string>
    <string name="not_found_error">Record not found</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="invalid_access_token_error">Invalid authorization data</string>
    <string name="error_data_title">No data</string>
    <string name="error_albums_message">An error occurred while retrieving albums. Please try again later.</string>
    <string name="error_genres_message">An error occurred while retrieving genres. Please try again later.</string>
    <string name="error_tracks_message">An error occurred while retrieving tracks. Please try again later.</string>
    <string name="error_favorites_message">An error occurred while retrieving favorites. Please try again later.</string>
    <string name="error_cache_message">An error occurred while retrieving favorites. Please try again later.</string>

    <!-- Placeholders -->
    <string name="username_placeholder" translatable="false">%s %s</string>
    <string name="track_with_artist_placeholder" translatable="false">%s - %s</string>
    <string name="current_phone_placeholder">Phone number:\n%s</string>
</resources>
