<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_search_hint"/>

    <item android:id="@+id/library"
        android:title="@string/library"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_library" />

    <item android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_profile" />
</menu>