<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.fragments.SignUpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/sign_up"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_baseline_default">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:imeOptions="actionNext"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_baseline_default"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            android:imeOptions="actionNext"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_baseline_default"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/think_up_nickname"
            android:inputType="text"
            android:imeOptions="actionDone"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="@dimen/layout_baseline_default"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/done"
                android:enabled="false"
                android:visibility="visible"/>

            <ProgressBar
                android:id="@+id/progressConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>