<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.fragments.CatalogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlbums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/albums"
            android:drawableEnd="@drawable/ic_right_black"
            android:padding="@dimen/layout_baseline_default"
            style="@style/AppTheme.AppCompatTextView.Label"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAlbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:itemCount="5"
                tools:listitem="@layout/item_album_small"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.babaetskv.muspert.ui.view.SmallEmptyView
                android:id="@+id/emptyViewAlbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:small_empty_icon="@drawable/ic_empty_list"
                app:small_empty_message="@string/empty_album_list_message"
                app:small_empty_message_color="@color/colorOnBackground"
                app:small_empty_action_icon="@drawable/ic_refresh_accent"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorHint"
            android:layout_marginTop="@dimen/layout_baseline_default"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:drawableEnd="@drawable/ic_right_black"
            android:padding="@dimen/layout_baseline_default"
            style="@style/AppTheme.AppCompatTextView.Label"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:itemCount="5"
                tools:listitem="@layout/item_genre_small"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.babaetskv.muspert.ui.view.SmallEmptyView
                android:id="@+id/emptyViewGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:small_empty_icon="@drawable/ic_empty_list"
                app:small_empty_message="@string/empty_genre_list_message"
                app:small_empty_message_color="@color/colorOnBackground"
                app:small_empty_action_icon="@drawable/ic_refresh_accent" />
        </FrameLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>