<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:id="@+id/layoutSms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:title="@string/validation"
                app:navigationIcon="@drawable/ic_arrow_back_white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/layout_baseline_default">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCurrPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Phone number:\n+7 999 999-99-99"
                    style="@style/AppTheme.AppCompatTextView.Hint"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_baseline_large"
                    android:text="@string/sms_hint"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
                    style="@style/AppTheme.AppCompatTextView.Label"/>

                <EditText
                    android:id="@+id/etSmsCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_baseline_large"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:hint="@string/enter_sms_code"
                    tools:text="111111"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonResendCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_baseline_large"
                    android:text="@string/resend_sms_code"/>

                <com.babaetskv.muspert.ui.view.SquareProgress
                    android:id="@+id/progressVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_baseline_default"
                    android:visibility="gone"
                    tools:visibility="visible"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/layout_baseline_extra_large"
                android:src="@drawable/logo"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_baseline_default"
                android:layout_marginTop="@dimen/layout_baseline_extra_large"
                android:text="@string/phone_hint"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
                style="@style/AppTheme.AppCompatTextView.Label"/>

            <LinearLayout
                android:id="@+id/layoutPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/layout_baseline_large"
                android:layout_marginHorizontal="@dimen/layout_baseline_default"
                android:gravity="center_vertical"
                android:background="@drawable/bg_surface_rounded"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneHint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_contentColor="@color/colorText"
                    app:ccp_defaultLanguage="RUSSIAN"
                    app:ccp_showArrow="true"
                    app:ccp_showFlag="true"
                    app:ccp_showNameCode="false"
                    app:ccp_textGravity="LEFT"
                    app:ccp_textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:digits="0123456789 ()-"
                    tools:text="999 999 99-99"
                    style="@style/AppTheme.AppCompatEditText"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_baseline_large"
                android:layout_marginHorizontal="@dimen/layout_baseline_default"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@id/layoutPhone"/>

            <com.babaetskv.muspert.ui.view.SquareProgress
                android:id="@+id/progressAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_baseline_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton"
                android:visibility="gone"
                tools:visibility="visible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>